--- a/fuckery/index.html
+++ b/fuckery/index.html
@@ -36,7 +36,7 @@
 	<div class="col-md-3 apicontent" id="map"></div>
 	
 	<div id="comments">
-		<form action="#" method="post" name="submission">
+		<form action="#" method="get" name="submission">
 			<p>Name: </p><input type="text" name="name" maxlength="50">
 			<p>Comment: </p><input type="text" name="comment" maxlength="2000">
 			<input type="submit" name="submission">
