Improved user experience

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -19,20 +19,27 @@
 
 
 
-<nav class="navbar navbar-default">
-	<h1>Travel Diary</h1>
-	<div class=links>
-		<ul class="nav navbar-nav navbar-center">
-			<a href="#"><div>Post</div></a>
-		</ul>
-		<a href="#"><div>Hot</div></a>
-		</ul>
-		<a href="#"><div>Newest</div></a>
-		</ul>
-		<a href="#"><div>FAQ</div></a>
-		</ul>
-	</div>
+	<nav class="navbar navbar-default">
+		<h1>The backpacker diaries: </h1>
+		<div class=links>
+			<ul class="nav navbar-nav navbar-center">
+				<a href="#"><div>Stories</div></a>
+			</ul>
+			<a href="#"><div>Bars</div></a>
+			</ul>
+			<a href="#"><div>Clubs</div></a>
+			</ul>
+			<a href="#"><div>Restaurants</div></a>
+			</ul>
+			<a href="#"><div>Attractions</div></a>
+			</ul>
+			</ul>
+			<a href="#"><div></div></a>
+			</ul>
+			</ul>
+		</div>
 	</nav>
+	
 	
 	<div class="col-md-7 content" id="test"></div>
 	<div class="col-md-3 apicontent" id="map"></div>
