--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet"
@@ -11,37 +11,20 @@
 <script src="http://maps.googleapis.com/maps/api/js"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>Stockholm</title>
-
+<link rel="stylesheet" type="text/css" href="index.css">
 </head>
-<body onload="gmapinit()">
+<body>
 
 
-
-<nav class="navbar navbar-default">
-	<h1>Travel Diary</h1>
-	<div class=links>
-		<ul class="nav navbar-nav navbar-center">
-			<a href="#"><div>Post</div></a>
-		</ul>
-		<a href="#"><div>Hot</div></a>
-		</ul>
-		<a href="#"><div>Newest</div></a>
-		</ul>
-		<a href="#"><div>FAQ</div></a>
-		</ul>
+	<div class="navbar navbar-default">
+		<h1>The backpacker diaries</h1>
 	</div>
-	</nav>
 	
-	<div class="col-md-7 content" id="test">
-	<div id="comments">
-		<form action="/Projektuppgift_webdev/show" method="POST" name="submission">
-			<p>Show conversations</p><input type="submit" name="show" value="show">
-		</form>
+	<div id="pics">
+		<div class="col-md-4 image"><a href="http://localhost:8080/Projektuppgift_webdev/show"><img src="pics/stock.png" alt="stockholm image not found">Stockholm</a></div>
+		<div class="col-md-4 image"><a href="http://localhost:8080/Projektuppgift_webdev/show"><img src="pics/malm.png" alt="malmo image not found">Malmö</a></div>
+		<div class="col-md-4 image"><a href="http://localhost:8080/Projektuppgift_webdev/show"><img src="pics/got.png" alt="gothenburg image not found">Gothenburg</a></div>
 	</div>
-	</div>
-	<div class="col-md-3 apicontent" id="map"></div>
 	
-
-<script type = "text/javascript" src = "main.js"></script>
 </body>
 </html>
