ajax and new css

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="http://maps.googleapis.com/maps/api/js"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Stockholm</title>
+<title>Travel</title>
 <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
@@ -20,10 +20,10 @@
 		<h1>The backpacker diaries</h1>
 	</div>
 	
-	<div id="pics">
-		<div class="col-md-4 image"><a href="http://localhost:8080/Projektuppgift_webdev/show"><img src="pics/stock.png" alt="stockholm image not found">Stockholm</a></div>
-		<div class="col-md-4 image"><a href="http://localhost:8080/Projektuppgift_webdev/show"><img src="pics/malm.png" alt="malmo image not found">Malmö</a></div>
-		<div class="col-md-4 image"><a href="http://localhost:8080/Projektuppgift_webdev/show"><img src="pics/got.png" alt="gothenburg image not found">Gothenburg</a></div>
+	<div id="pics" class="col-md-12">
+		<div class="col-md-4 image"><a href="/Projektuppgift_webdev/show"><img src="pics/stock.png" alt="stockholm image not found"></a><p>Stockholm</p></div>
+		<div class="col-md-4 image"><a href="/Projektuppgift_webdev/show"><img src="pics/malm.png" alt="malmo image not found"></a><p>Malmö</p></div>
+		<div class="col-md-4 image"><a href="/Projektuppgift_webdev/show"><img src="pics/got.png" alt="gothenburg image not found"></a><p>Göteborg</p></div>
 	</div>
 	
 </body>
