--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -17,7 +17,7 @@
 
 
 	<div class="navbar navbar-default">
-		<h1>The backpacker diaries</h1>
+		<p class="h1">The backpacker diaries</p>
 	</div>
 	
 	<div id="pics" class="col-md-12">
